kubernetes/software_backend_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: software-backend-api
  name: software_backend_api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "9229"
      port: 9229
      targetPort: 9229
  selector:
    io.kompose.service: software-backend-api
status:
  loadBalancer: {}
